[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/cavestuff/skelebones_house.png" type="Texture" id=1]
[ext_resource path="res://BG.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/0.0 Cave/SkelebonesHouse.gd" type="Script" id=5]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/cavestuff/skeleboneshome_long.png" type="Texture" id=7]

[node name="SkelebonesHouse" type="Node2D"]
script = ExtResource( 5 )

[node name="skeleboneshome_long" type="Sprite" parent="."]
position = Vector2( 479.303, 28.749 )
texture = ExtResource( 7 )

[node name="BG" parent="." instance=ExtResource( 2 )]
margin_left = -864.0
margin_top = -2614.0
margin_right = 1942.0
margin_bottom = 1616.0

[node name="skelebones_house" type="Sprite" parent="."]
visible = false
position = Vector2( 473.94, 554.3 )
texture = ExtResource( 1 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 496.058, 1296.18 )
camera = NodePath("../../PuppyCamera")

[node name="PuppyCamera" parent="." instance=ExtResource( 4 )]

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -772.807, -2194.63 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 1855.95, 1598.21 )

[node name="TopSpawnPoint" parent="." instance=ExtResource( 6 )]
position = Vector2( 417.189, -697.286 )

[node name="BottomSpawnPoint" parent="." instance=ExtResource( 6 )]
position = Vector2( 484.948, 1327.69 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 424.423, 1477.96, 327.159, 1417.75, 285.475, 1339.01, 331.791, 1260.27, 290.106, 1084.27, 317.896, -495.104, 294.738, -675.736, 308.633, -759.105, 373.475, -773, 373.475, -958.263, 470.739, -958.263, 475.37, -782.263, 669.897, -768.368, 711.582, -638.683, 679.161, -379.314, 702.318, 528.479, 688.424, 732.269, 725.477, 931.428, 744.003, 1292.69, 725.477, 1380.69, 568.002, 1491.85, 1142.32, 1505.75, 1114.53, -1009.21, 2.94751, -1037, -61.895, 1505.75 )

[editable path="PuppyCamera"]
